# shaka-packager

./: .dockerignore  .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.PLUTOTV.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  DEPS  DESIGN.md  Dockerfile  DockerfilePluto  LICENSE  Makefile  Please add repo description  README.PLUTOTV.md  README.md  README_mpd:media_info_proto  SCTE35_ANALYSIS.md  SECURITY.md  appveyor.yml  build-matrix.json  build.sh  chromium-LICENSE  documentation.html  dump-1.txt  dump-2.txt  gyp_packager.py  packager.gyp  search.html  test.txt
link-test/: CMakeLists.txt  README.md  test.cc
packager/: CMakeLists.txt  common.gypi  common.h  common_overrides.gypi  flag_saver.h  fully-static.cmake  gtest.cmake  live_packager.cc  live_packager.h  live_packager_export.cc  live_packager_test.cc  macros.h  packager.cc  packager.gyp  packager.h  packager.pc.in  packager_test.cc  policies.cmake  protobuf.cmake  protoc.gypi  status.cc  status.h  status_macros.h  status_test_util.h  status_unittest.cc
packager/app/: CMakeLists.txt  ad_cue_generator_flags.cc  ad_cue_generator_flags.h  cpix_encryption_flags.cc  cpix_encryption_flags.h  crypto_flags.cc  crypto_flags.h  fixed_key_encryption_flags.cc  fixed_key_encryption_flags.h  gflags_hex_bytes.cc  gflags_hex_bytes.h  hls_flags.cc  hls_flags.h  job_manager.cc  job_manager.h  libcrypto_threading.cc  libcrypto_threading.h  libcrypto_threading_posix.cc  manifest_flags.cc  manifest_flags.h  mpd_flags.cc  mpd_flags.h  mpd_generator.cc  mpd_generator_flags.h  muxer_factory.cc  muxer_factory.h  muxer_flags.cc  muxer_flags.h  packager_main.cc  packager_util.cc  packager_util.h  playready_encryption_flags.cc  playready_encryption_flags.h  playready_key_encryption_flags.cc  playready_key_encryption_flags.h  protection_system_flags.cc  protection_system_flags.h  raw_key_encryption_flags.cc  raw_key_encryption_flags.h  retired_flags.cc  (+11 more)
packager/app/test/: packager_app.py  packager_test.py  test_env.py
packager/file/: CMakeLists.txt  callback_file.cc  callback_file.h  callback_file_unittest.cc  file.cc  file.gyp  file.h  file_closer.h  file_test_util.cc  file_test_util.h  file_unittest.cc  file_util.cc  file_util.h  file_util_unittest.cc  http_file.cc  http_file.h  http_file_unittest.cc  io_cache.cc  io_cache.h  io_cache_unittest.cc  local_file.cc  local_file.h  memory_file.cc  memory_file.h  memory_file_unittest.cc  thread_pool.cc  thread_pool.h  threaded_io_file.cc  threaded_io_file.h  udp_file.cc  udp_file.h  udp_options.cc  udp_options.h  udp_options_unittest.cc
packager/file/public/: buffer_callback_params.h
packager/hls/: CMakeLists.txt  hls.gyp
packager/hls/base/: hls_notifier.h  master_playlist.cc  master_playlist.h  master_playlist_unittest.cc  media_playlist.cc  media_playlist.h  media_playlist_unittest.cc  mock_media_playlist.cc  mock_media_playlist.h  simple_hls_notifier.cc  simple_hls_notifier.h  simple_hls_notifier_unittest.cc  tag.cc  tag.h
packager/hls/public/: hls_params.h  hls_playlist_type.h
packager/kv_pairs/: CMakeLists.txt  kv_pairs.cc  kv_pairs.h  kv_pairs_unittest.cc
packager/macros/: compiler.h  crypto.h  logging.h  status.h
packager/media/: CMakeLists.txt
packager/media/ad_cue_generator/: ad_cue_generator.cc  ad_cue_generator.gyp  ad_cue_generator.h
packager/media/base/: CMakeLists.txt  aes_cryptor.cc  aes_cryptor.h  aes_cryptor_unittest.cc  aes_decryptor.cc  aes_decryptor.h  aes_encryptor.cc  aes_encryptor.h  aes_encryptor_unittest.cc  aes_key_wrap.cc  aes_key_wrap.h  aes_key_wrap_unittest.cc  aes_pattern_cryptor.cc  aes_pattern_cryptor.h  aes_pattern_cryptor_unittest.cc  audio_stream_info.cc  audio_stream_info.h  audio_stream_info_unittest.cc  audio_timestamp_helper.cc  audio_timestamp_helper.h  audio_timestamp_helper_unittest.cc  bit_reader.cc  bit_reader.h  bit_reader_unittest.cc  bit_writer.cc  bit_writer.h  bit_writer_unittest.cc  buffer_reader.cc  buffer_reader.h  buffer_writer.cc  buffer_writer.h  buffer_writer_unittest.cc  byte_queue.cc  byte_queue.h  cc_stream_filter.cc  cc_stream_filter.h  closure_thread.cc  closure_thread.h  closure_thread_unittest.cc  common_pssh_generator.cc  (+129 more)
packager/media/chunking/: CMakeLists.txt  chunking.gyp  chunking_handler.cc  chunking_handler.h  chunking_handler_unittest.cc  cue_alignment_handler.cc  cue_alignment_handler.h  cue_alignment_handler_unittest.cc  segment_coordinator.cc  segment_coordinator.h  segment_coordinator_unittest.cc  sync_point_queue.cc  sync_point_queue.h  text_chunker.cc  text_chunker.h  text_chunker_unittest.cc  webvtt_segmenter.cc  webvtt_segmenter.h  webvtt_segmenter_unittest.cc
packager/media/codecs/: CMakeLists.txt  aac_audio_specific_config.cc  aac_audio_specific_config.h  aac_audio_specific_config_unittest.cc  ac3_audio_util.cc  ac3_audio_util.h  ac3_audio_util_unittest.cc  ac4_audio_util.cc  ac4_audio_util.h  ac4_audio_util_unittest.cc  ac4_parser.cc  ac4_parser.h  ac4_parser_unittest.cc  av1_codec_configuration_record.cc  av1_codec_configuration_record.h  av1_codec_configuration_record_unittest.cc  av1_parser.cc  av1_parser.h  av1_parser_unittest.cc  avc_decoder_configuration_record.cc  avc_decoder_configuration_record.h  codecs.gyp  ec3_audio_util.cc  (+60 more)
packager/mpd/: CMakeLists.txt  mpd.gyp
packager/public/: chunking_params.h  crypto_params.h  file.h  packager.h  status.h
packager/status/: CMakeLists.txt  status.cc  status.h  status_macros.h  status_test_util.h  status_test_util_unittest.cc  status_unittest.cc
packager/testing/: gmock.gyp  gtest.gyp  platform_test_ios.mm  test_dockers.sh
packager/tools/: CMakeLists.txt  extract_from_changelog.py  generate_license_notice.py  license_notice.gyp
packager/utils/: CMakeLists.txt  absl_flag_hexbytes.cc  absl_flag_hexbytes.h  bytes_to_string_view.h  clock.cc  clock.h  hex_parser.cc  hex_parser.h  string_trim_split.cc  string_trim_split.h  test_clock.cc  test_clock.h
packager/version/: CMakeLists.txt  generate_version_string.py  version.cc  version.gyp  version.h
(+6587 files in other folders)
